--- a/package.json
+++ b/package.json
@@ -16,12 +16,21 @@
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.29.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwindcss": "^4.1.18"
+    "simple-icons": "^16.6.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
+    "@rollup/plugin-yaml": "^4.1.2",
+    "tw-animate-css": "^1.4.0",
     "ultracite": "7.1.1"
   }
 }
