--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@iconify-json/lucide": "^1.2.87",
+    "@iconify-json/simple-icons": "^1.2.68",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.17.1",
+    "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "simple-icons": "^16.6.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6"
