--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,4 +1,18 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
-  "extends": ["ultracite/biome/core", "ultracite/biome/astro"]
+  "extends": ["ultracite/biome/core", "ultracite/biome/astro"],
+  "overrides": [
+    {
+      "includes": ["src/components/starwind/**/*"],
+      "linter": {
+        "rules": {
+          "style": {
+            "useFilenamingConvention": "off",
+            "noExportedImports": "off",
+            "noDescendingSpecificity": "off"
+          }
+        }
+      }
+    }
+  ]
 }
