--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
+    "@fontsource-variable/geist-mono": "^5.2.7",
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/source-serif-4": "^5.2.9",
     "@iconify-json/lucide": "^1.2.87",
     "@iconify-json/simple-icons": "^1.2.68",
-    "@tailwindcss/typography": "^0.5.19",
+    "@tabler/icons": "^3",
+    "@tailwindcss/forms": "^0.5",
     "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
@@ -29,6 +33,8 @@
     "remark-gfm": "^4.0.1",
     "remark-smartypants": "^3.0.2",
     "shiki": "^3.21.0",
+    "tailwind-merge": "^3",
+    "tailwind-variants": "^3",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.6"
   },
