--- a/starwind.config.json
+++ b/starwind.config.json
@@ -10,6 +10,14 @@
     {
       "name": "prose",
       "version": "1.0.0"
+    },
+    {
+      "name": "item",
+      "version": "1.0.0"
+    },
+    {
+      "name": "separator",
+      "version": "1.0.0"
     }
   ]
 }
