add theme toggling

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -5,13 +5,7 @@
     {
       "includes": ["src/components/starwind/**/*"],
       "linter": {
-        "rules": {
-          "style": {
-            "useFilenamingConvention": "off",
-            "noExportedImports": "off",
-            "noDescendingSpecificity": "off"
-          }
-        }
+        "enabled": false
       }
     }
   ]
