--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/react": "^4.4.2",
+    "@astrojs/rss": "^4.0.15",
     "@fontsource-variable/geist-mono": "^5.2.7",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/source-serif-4": "^5.2.9",
@@ -27,6 +28,7 @@
     "astro": "^5.17.1",
     "astro-icon": "^1.1.5",
     "astro-seo": "^1.1.0",
+    "markdown-it": "^14.1.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "rehype-autolink-headings": "^7.1.0",
@@ -34,6 +36,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-smartypants": "^3.0.2",
+    "sanitize-html": "^2.17.0",
     "satori-html": "^0.3.2",
     "shiki": "^3.21.0",
     "tailwind-merge": "^3",
@@ -44,6 +47,8 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
     "@rollup/plugin-yaml": "^4.1.2",
+    "@types/markdown-it": "^14.1.2",
+    "@types/sanitize-html": "^2.16.0",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
     "tw-animate-css": "^1.4.0",
