--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/source-serif-4": "^5.2.9",
     "@iconify-json/lucide": "^1.2.87",
     "@iconify-json/simple-icons": "^1.2.68",
+    "@rehype-pretty/transformers": "^0.13.2",
     "@tabler/icons": "^3",
     "@tailwindcss/forms": "^0.5",
     "@tailwindcss/vite": "^4.1.18",
@@ -30,7 +31,6 @@
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "remark-smartypants": "^3.0.2",
     "sanitize-html": "^2.17.0",
     "satori-html": "^0.3.2",
     "shiki": "^3.21.0",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.12",
     "@rollup/plugin-yaml": "^4.1.2",
+    "@shikijs/markdown-it": "^3.22.0",
     "@types/markdown-it": "^14.1.2",
     "@types/sanitize-html": "^2.16.0",
     "tw-animate-css": "^1.4.0",
