add katex support in markdown

--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "astro-seo": "^1.1.0",
     "markdown-it": "^14.1.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-github-alerts": "^0.1.1",
+    "remark-math": "^6.0.0",
     "sanitize-html": "^2.17.0",
     "satori-html": "^0.3.2",
     "shiki": "^3.21.0",
