--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/octicon": "^1.2.20",
     "@iconify-json/simple-icons": "^1.2.68",
+    "@mermaid-js/layout-elk": "^0.2.0",
     "@rehype-pretty/transformers": "^0.13.2",
     "@tabler/icons": "^3",
     "@tailwindcss/forms": "^0.5",
@@ -27,8 +28,10 @@
     "@takumi-rs/image-response": "^0.66.13",
     "astro": "^5.17.1",
     "astro-icon": "^1.1.5",
+    "astro-mermaid": "^1.3.1",
     "astro-seo": "^1.1.0",
     "markdown-it": "^14.1.0",
+    "mermaid": "^11.12.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
